aggiunta bootstrap col-9 e col-3 per divisione spiegazione in Comunicazioni

--- a/Comunicazioni/Views/Comunicazioni/List.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/List.cshtml
@@ -4,6 +4,8 @@
 @model List<IGrouping<Guid, Comunicazioni.Models.Entities.Comunicazione>>
 
 <h1>Comunicazioni</h1>
+<div class="row gx-5">
+    <div class="col-9">
 <table class="table">
     <thead>
         <tr>
@@ -100,3 +102,6 @@
         }
     </tbody>
 </table>
+</div>
+    <div class="col-3 shadow p-3 bg-body-tertiary rounded">In questa pagina </div>
+</div>
