--- a/Comunicazioni/Views/Comunicazioni/Add.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/Add.cshtml
@@ -7,29 +7,32 @@
 @model Comunicazioni.Models.AddComunicazioneViewModel
 
 <h1>Nuova Comunicazione</h1>
-
-<form method="post">
-	<div class="mt-3">
-		<label class="form-label">Testo: </label>
-		<textarea asp-for="Testo" class="form-control" rows="6"></textarea>
-		<span asp-validation-for="Testo" class="text-danger"></span>
+<div class="row gx-5">
+	<div class="col-9">
+		<form method="post">
+			<div class="mt-3">
+				<label class="form-label">Testo: </label>
+				<textarea asp-for="Testo" class="form-control" rows="6"></textarea>
+				<span asp-validation-for="Testo" class="text-danger"></span>
+			</div>
+			@{
+				var ruolo = Context.Session.GetString("ruolo");
+			}
+			@if (ruolo == "Docente")
+			{
+				<div class="mt-3">
+					<label class="form-label">Esame: </label>
+					<select asp-for="K_Esame" asp-items="@ViewBag.EsamiList" class="form-select">
+						<option disabled selected>-- Seleziona un esame --</option>
+					</select>
+					<span asp-validation-for="K_Esame" class="text-danger"></span>
+				</div>
+			}
+			<div class="mt-4">
+				<button type="submit" class="btn btn-primary">Inserisci Comunicazione</button>
+			</div>
+		</form>
 	</div>
-	@{
-		var ruolo = Context.Session.GetString("ruolo");
-	}
-	@if (ruolo == "Docente")
-	{
-		<div class="mt-3">
-			<label class="form-label">Esame: </label>
-			<select asp-for="K_Esame" asp-items="@ViewBag.EsamiList" class="form-select">
-				<option disabled selected>-- Seleziona un esame --</option>
-			</select>
-			<span asp-validation-for="K_Esame" class="text-danger"></span>
-		</div>
-	}
-	<div class="mt-4">
-		<button type="submit" class="btn btn-primary">Inserisci Comunicazione</button>
-	</div>
-</form>
-
+	<div class="col-3 shadow p-3 bg-body-tertiary rounded">In questa pagina </div>
+</div>
 
