--- a/AreaStudente/Views/Studenti/Show.cshtml
+++ b/AreaStudente/Views/Studenti/Show.cshtml
@@ -45,6 +45,8 @@
 								</div>
 							</div>
 						</div>
+						<div class="p-4">
+						</div>
 						<div class="card-body pt-0 pt-md-4">
 							<div class="text-center">
 								<small class="d-block text-muted mt-2 mb-3">Per modificare l'immagine del profilo vai su "Modifica Dati"</small>
