adjusted columns on the left correctly

--- a/AreaStudente/Views/Studenti/Show.cshtml
+++ b/AreaStudente/Views/Studenti/Show.cshtml
@@ -48,6 +48,8 @@
 						<div class="p-4">
 						</div>
 						<div class="card-body pt-0 pt-md-4">
+							<div class="p-5">
+							</div>
 							<div class="text-center">
 								<small class="d-block text-muted mt-2 mb-3">Per modificare l'immagine del profilo vai su "Modifica Dati"</small>
 								<h3>@(Model?.Nome ?? "N/A") @(Model?.Cognome ?? "N/A")</h3>
@@ -75,7 +77,11 @@
 								</div>
 							</div>
 						</div>
+						<div class="p-4">
+						</div>
 						<div class="card-body pt-0 pt-md-4">
+							<div class="p-5">
+							</div>
 							<div class="text-center">
 								<small class="d-block text-muted mt-2 mb-3">Per modificare l'immagine del profilo vai su "Modifica Dati"</small>
 								<h3>@(Model?.Nome ?? "N/A") @(Model?.Cognome ?? "N/A")</h3>
