--- a/AreaStudente/Views/Studenti/Show.cshtml
+++ b/AreaStudente/Views/Studenti/Show.cshtml
@@ -36,7 +36,7 @@
 			<div class="row">
 			<!-- COLONNA SINISTRA: 2 profili impilati -->
 				<div class="col-xl-4 order-xl-2">
-					<!-- PRIMO PROFILO -->
+					<!-- PROFILO -->
 					<div class="card card-profile shadow mb-4">
 						<div class="row justify-content-center">
 							<div class="col-lg-3 order-lg-2">
@@ -68,14 +68,10 @@
 						</div>
 					</div>
 
-					<!-- SECONDO PROFILO -->
+					<!-- COMUNICAZIONI -->
 					<div class="card card-profile shadow">
-						<div class="row justify-content-center">
-							<div class="col-lg-3 order-lg-2">
-								<div class="card-profile-image">
-									<img src="@(Model?.ImmagineProfilo != null ? $"data:{Model.Tipo};base64,{Convert.ToBase64String(Model.ImmagineProfilo)}" : Url.Content("~/resources/BlankProfile.jpg"))" class="rounded-circle img-fluid">
-								</div>
-							</div>
+						<div class="row text-center">
+								<p class="fs-3">Le tue Comunicazioni</p>
 						</div>
 						<div class="p-4">
 						</div>
@@ -83,19 +79,7 @@
 							<div class="p-5">
 							</div>
 							<div class="text-center">
-								<small class="d-block text-muted mt-2 mb-3">Per modificare l'immagine del profilo vai su "Modifica Dati"</small>
-								<h3>@(Model?.Nome ?? "N/A") @(Model?.Cognome ?? "N/A")</h3>
-								<div><i class="ni education_hat mr-2"></i>Università UniGen</div>
 								<hr class="my-4">
-								<p>Vai alla tua Area Lavoro</p>
-								@if (Model?.Abilitato == "S")
-								{
-									<a class="fs-4" href="/AreaLavoro" title="Accedi alla tua Area Lavoro" data-bs-toggle="tooltip" data-bs-placement="top">Area Lavoro</a>
-								}
-								else
-								{
-									<a class="fs-4 text-muted" style="pointer-events: none; cursor: not-allowed;" title="Devi essere abilitato per accedere" data-bs-toggle="tooltip" data-bs-placement="top" tabindex="-1">Area Lavoro</a>
-								}
 							</div>
 						</div>
 					</div>
