--- a/AreaStudente/Views/Studenti/Show.cshtml
+++ b/AreaStudente/Views/Studenti/Show.cshtml
@@ -11,7 +11,7 @@
 
 <div class="main-content">
 	<!-- Header -->
-	<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 600px; background-image: url('/resources/StudentiUniversitari.jpg'); background-size: cover; background-position: center top;">
+	<div class="header pb-8 pt-5 d-flex align-items-center" style="max-height: 400px; background-image: url('/resources/StudentiUniversitari.jpg'); background-size: cover; background-position: center top;">
 		<!-- Mask -->
 		<span class="mask bg-gradient-default opacity-8"></span>
 		<!-- Header container -->
@@ -34,7 +34,7 @@
 		@if (Model != null && Model.K_Studente != Guid.Empty)
 		{
 			<div class="row">
-			<!-- COLONNA SINISTRA: 2 profili impilati -->
+			<!-- COLONNA SINISTRA: 2 card impilate -->
 				<div class="col-xl-4 order-xl-2">
 					<!-- PROFILO -->
 					<div class="card card-profile shadow mb-4">
@@ -84,7 +84,7 @@
 						</div>
 					</div>
 				</div>
-
+				
 				<!-- User -->
 				<div class="col-xl-8 order-xl-1">
 					<div class="card bg-secondary shadow">
@@ -95,14 +95,14 @@
 									<div class="row">
 										<div class="col-lg-6">
 											<div class="form-group focused">
-												<label class="form-control-label" for="input-first-name">Nome</label>
-												<input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="Nome" value="@(Model?.Nome ?? "N/A")" readonly>
+												<label class="form-control-label" for="input-last-name">Cognome</label>
+												<input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Cognome" value="@(Model?.Cognome ?? "N/A")" readonly>
 											</div>
 										</div>
 										<div class="col-lg-6">
 											<div class="form-group">
-												<label class="form-control-label" for="input-last-name">Cognome</label>
-												<input type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Cognome" value="@(Model?.Cognome ?? "N/A")" readonly>
+												<label class="form-control-label" for="input-first-name">Nome</label>
+												<input type="text" id="input-first-name" class="form-control form-control-alternative" placeholder="Nome" value="@(Model?.Nome ?? "N/A")" readonly>
 											</div>
 										</div>
 									</div>
