--- a/AreaAmministrazione/MasterPage.master
+++ b/AreaAmministrazione/MasterPage.master
@@ -44,7 +44,7 @@
                     <div class="d-flex justify-content-between align-items-center flex-wrap">
                         <div>
                             <a href="#">
-                                <img src="~/resources/logo.png" height="50px"></a>
+                                <img src="/resources/logo.png" height="50px"></a>
                         </div>
 
                         <div>
