--- a/AreaPubblica/Views/Home/Index.cshtml
+++ b/AreaPubblica/Views/Home/Index.cshtml
@@ -36,25 +36,17 @@
 							<div class="carousel-inner">
 								<div class="carousel-item active">
 									<img src="~/Sources/Image20250424100652.gif" class="d-block w-100" alt="GIF 1">
-									<div>
-										<h1 class="text-light">ciao ciao ciao</h1>
-									</div>
 								</div>
 								<div class="carousel-item">
 									<img src="~/Sources/Image20250424100701.gif" class="d-block w-100" alt="GIF 2">
-									<div>
-										<h1 class="text-light">ciao ciao ciao</h1>
-									</div>
+									
 								</div>
 								<div class="carousel-item">
 									<img src="~/Sources/Image20250424103740.gif" class="d-block w-100" alt="GIF 3">
-									<div>
-										<h1 class="text-light">ciao ciao ciao</h1>
-									</div>
 								</div>
 							</div>
 						</div>
-
+					
 						<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
 							<span class="carousel-control-prev-icon"></span>
 						</button>
@@ -64,6 +56,7 @@
 
 						<!-- Velatura in basso -->
 						<div class="bottom-overlay d-flex flex-column justify-content-end align-items-center text-center">
+							<h1 class="">La conoscenza rende liberi</h1>
 							<h5 class="text-white mb-3">Scorri Giù</h5>
 							<a href="#next-section" class="btn btn-outline-light mb-4" onclick="scrollToSection()">↓</a>
 						</div>
@@ -114,7 +107,7 @@
 			<div class="card" style="width: 18rem;transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.03)'; this.style.backgroundColor='rgba(0, 0, 0, 0.05)'" onmouseout="this.style.transform='scale(1)'; this.style.backgroundColor='transparent'">
 				<img src="~/Sources/esamiedocentiUNIGEN.png" class="card-img-top" alt="...">
 				<div class="card-body">
-					<p class="fw-bold">Esamni e Docendi</p>
+					<p class="fw-bold">Esami e Docenti</p>
 					<p class="card-text">Consulta informazioni su esami, modalità di svolgimento, programmi e contatti dei docenti per ogni insegnamento.</p>
 				</div>
 			</div>
@@ -123,7 +116,7 @@
 			<div class="card" style="width: 18rem;transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.03)'; this.style.backgroundColor='rgba(0, 0, 0, 0.05)'" onmouseout="this.style.transform='scale(1)'; this.style.backgroundColor='transparent'">
 				<img src="~/Sources/corsostudiUNIGEN.png" class="card-img-top" alt="...">
 				<div class="card-body">
-					<p class="fw-bold">Corsi Studio</p>
+					<p class="fw-bold">Corsi di Studio</p>
 					<p class="card-text">Scopri l’offerta formativa completa: corsi triennali, magistrali e a ciclo unico, pensati per accompagnarti nel tuo percorso universitario.</p>
 				</div>
 			</div>
