--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -25,30 +25,9 @@
     </style>
 
 </head>
-<body>
-    <div class="bg-black pb-1">
-        <div class="container d-flex flex-column">
-            <div class="d-flex justify-content-end mb-2 mt-1">
-                <!-- Pulsanti in alto a destra -->
-                <div class="d-flex gap-2">
-                    <a href="#" class="btn btn-light btn-sm"><i class="bi bi-envelope"></i> Webmail</a>
-                    <a href="#" class="btn btn-light btn-sm"><i class="bi bi-person-circle"></i> *Placeholder per il nome docente*</a>
-                </div>
-            </div>
-
-            <div class="d-flex justify-content-between align-items-center flex-wrap">
-                <div>
-                    <a href="#"><img src="~/css/resources/logo.png" height="50px"></a>
-                </div>
-
-                <div>
-                    <p class="fs-4 text-white m-0">Fatti non foste a viver come bruti</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <header>
-        <div class="sticky-top">
+<body class="m-0">
+    <header class="mb-5">
+        <div class="fixed-top">
             <nav class="navbar navbar-dark navbar-expand-lg navbar-custom">
                 <div class="container">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,6 +35,13 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                            <li>
+                            <a class="navbar-brand" href="#">
+                                <img src="~/css/resources/logonobg.png" alt="Bootstrap" width="150">
+                            </a>
+                            </li>
+
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
@@ -87,6 +73,13 @@
                             </li>
 
                         </ul>
+                        <ul class="navbar-nav navbar-right">
+                            <li class="nav-item">
+                                <a class="btn btn-light btn-sm disabled"><i class="bi bi-person-circle"></i> *Placeholder per il nome docente*</a>
+                            </li>
+
+
+                        </ul>
                     </div>
                 </div>
             </nav>
@@ -94,13 +87,14 @@
     </header>
 
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-3 mt-5">
+            <div class="mt-5">&nbsp;</div>
             @RenderBody()
         </main>
     </div>
 
     <footer>
-        <div class="bg-dark text-white h-100">
+        <div class="bg-dark text-white position-sticky">
             <div class="container d-flex justify-content-between align-items-end flex-wrap">
                 <div>
                     <img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3" width="150px">
