--- a/AreaStudente/wwwroot/css/site.css
+++ b/AreaStudente/wwwroot/css/site.css
@@ -71,10 +71,29 @@ body {
     position: relative;
 }
 .main-content {
-    position: absolute;
-    z-index: 
+    position: relative;
+
 }
 
 .text-white {
     color: #fff !important;
+}
+
+.col-lg-7, .col-md-10{
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+mt--7 {
+    margin-top: -6rem !important;
+}
+
+@media (min-width: 768px) {
+    .main-content .container-fluid {
+        padding-right: 39px !important;
+        padding-left: 39px !important;
+    }
 }
