--- a/AreaPubblica/Views/Login/Login.cshtml
+++ b/AreaPubblica/Views/Login/Login.cshtml
@@ -1,17 +1,23 @@
 ﻿@model AreaPubblica.Models.LoginViewModel
 
-<h1>Login Studente</h1>
+<div class="d-flex flex-column align-items-center mt-3" style="justify-content: center;">
+    <div class="w-25">
+        <h1 class="text-center">Login Studente</h1>
 
-<form method="post">
-	<div class="mb-3">
-		<label for="username" class="form-label">Username</label>
-		<input type="text" class="form-control" asp-for="username" required>
-	</div>
-	<div class="mb-3">
-		<label for="password" class="form-label">Password</label>
-		<input type="password" class="form-control" asp-for="PWD" required>
-	</div>
-	<button type="submit" class="btn btn-primary">Login</button>
-	<p>Se non sei ancora registrato</p>
-	<a class="btn btn-primary" asp-area="" asp-controller="Login" asp-action="Register">Registrati qui</a>
-</form>
+        <form method="post">
+            <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" asp-for="username" required>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" asp-for="PWD" required>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Login</button>
+            <p class="mt-3 text-center">Se non sei ancora registrato</p>
+            <div class="d-flex justify-content-center">
+                <a class="btn btn-secondary" asp-area="" asp-controller="Login" asp-action="Register">Registrati qui</a>
+            </div>
+        </form>
+    </div>
+</div>
