--- a/AreaPubblica/Views/Home/Index.cshtml
+++ b/AreaPubblica/Views/Home/Index.cshtml
@@ -18,15 +18,21 @@
 		.bottom-overlay a {
 			pointer-events: auto; /* Ma il testo e il bottone devono essere cliccabili */
 		}
+
+
+		#testoVelatura > h1{
+		font-size: 5.5rem;
+		font-weight: 600;
+		opacity: 0.9;
+
+		}
 </style>
 <header>
 
-	<div class="container mt-3 mb-4">
+	<div class="">
 		<div class="">
 
-
-
-			<div id="carouselExampleIndicators" class="carousel slide position-relative" data-bs-ride="carousel">
+			<div id="carouselExampleIndicators" class="carousel slide position-relative " data-bs-ride="carousel">
 
 				<div class="container-fluid p-0">
 					<div class="position-relative">
@@ -39,7 +45,6 @@
 								</div>
 								<div class="carousel-item">
 									<img src="~/Sources/Image20250424100701.gif" class="d-block w-100" alt="GIF 2">
-									
 								</div>
 								<div class="carousel-item">
 									<img src="~/Sources/Image20250424103740.gif" class="d-block w-100" alt="GIF 3">
@@ -55,40 +60,14 @@
 						</button>
 
 						<!-- Velatura in basso -->
-						<div class="bottom-overlay d-flex flex-column justify-content-end align-items-center text-center">
-							<h1 class="">La conoscenza rende liberi</h1>
-							<h5 class="text-white mb-3">Scorri Giù</h5>
-							<a href="#next-section" class="btn btn-outline-light mb-4" onclick="scrollToSection()">↓</a>
+						<div id="testoVelatura" class="bottom-overlay d-flex flex-column justify-content-end align-items-center text-center">
+							<h1 class="text-light fw-bold ">UniGen</h1>
+							<p class="text-light fs-1 fst-italic" style="font-family: serif">La conoscenza rende liberi</p>
+							<p class="text-light opacity-75 mb-2 fs-6">Scorri Giù</p>
+							<a href="#next-section" class="btn btn-outline text-light opacity-75 mb-4" onclick="scrollToSection()" onmouseover="">∨</a>
 						</div>
 					</div>
 				</div>
-
-
-
-				@* 		<!-- SCRITTA FISSA CENTRATA -->
-
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<img src="~/Sources/Image20250424100652.gif" class="d-block w-100" alt="GIF animata">
-						</div>
-						<div class="carousel-item">
-							<img src="~/Sources/Image20250424100701.gif" class="d-block w-100" alt="GIF animata">
-						</div>
-						<div class="carousel-item">
-							<div class="position-absolute top-50 start-50 translate-middle text-white text-center z-3">
-								<h2 class="fw-bold">La conoscenza rende liberi</h2>
-							</div>
-							<img src="~/Sources/Image20250424103740.gif" class="d-block w-100" alt="GIF animata">
-						</div>
-					</div>
-
-					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-						<span class="carousel-control-prev-icon"></span>
-					</button>
-					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-						<span class="carousel-control-next-icon"></span>
-					</button> *@
-
 
 			</div>
 
@@ -142,7 +121,45 @@
 			</div>
 		</div>
 
+		<div id="news" class=" mt-5 ">
+			<h2 class="mt-5  d-flex flex-row justify-content-around mt-2">Ultime Notizie</h2>
+			<div class="ms-3 mb-3 col card" style="transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.03)'; this.style.backgroundColor='rgba(0, 0, 0, 0.05)'" onmouseout="this.style.transform='scale(1)'; this.style.backgroundColor='transparent'">
+				<div class="row g-0">
+					<div class="col-md-6">
+						<img src="~/sources/Notizie1.jpg" class="img-fluid rounded-start" alt="...">
+					</div>
+					<div class="col-md-6">
+						<div class="card-body">
+							<h5 class="card-title">Le Nuove Aule Studio </h5>
+							<p class="card-text">L'apertura delle nostre nuove aule studio con cui supportiamo i nostri studenti nei loro progetti di studio.</p>
+							<p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+						</div>
+					</div>
+				</div>
+			</div>
 
+
+			<div class="d-flex flex-row justify-content-around mt-2">
+
+				<div class="card" style="width: 18rem;transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.03)'; this.style.backgroundColor='rgba(0, 0, 0, 0.05)'" onmouseout="this.style.transform='scale(1)'; this.style.backgroundColor='transparent'">
+					<img src="~/Sources/votazioniUNIGEN.png" class="card-img-top" alt="...">
+					<div class="card-body">
+						<p class="fw-bold">Esami e Docenti</p>
+						<p class="card-text">Consulta informazioni su esami, modalità di svolgimento, programmi e contatti dei docenti per ogni insegnamento.</p>
+					</div>
+				</div>
+
+
+				<div class="card" style="width: 18rem;transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.03)'; this.style.backgroundColor='rgba(0, 0, 0, 0.05)'" onmouseout="this.style.transform='scale(1)'; this.style.backgroundColor='transparent'">
+					<img src="~/Sources/corsostudiUNIGEN.png" class="card-img-top" alt="...">
+					<div class="card-body">
+						<p class="fw-bold">Corsi di Studio</p>
+						<p class="card-text">Scopri l’offerta formativa completa: corsi triennali, magistrali e a ciclo unico, pensati per accompagnarti nel tuo percorso universitario.</p>
+					</div>
+				</div>
+
+
+			</div>
 
 
 
