--- a/AreaAmministrazione/MasterPage.master
+++ b/AreaAmministrazione/MasterPage.master
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
 
-    <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -24,19 +23,20 @@
             color: white;
             padding-top: 1rem;
             flex-shrink: 0;
-            box-shadow: 0px 4px 12px rgba(33, 33, 33, 0.1);
+            transition: transform 0.3s ease;
+            box-shadow: 4px 0px 12px rgba(0, 0, 0, 0.3);
         }
 
-        .sidebar a {
-            display: block;
-            padding: 12px 20px;
-            color: white;
-            text-decoration: none;
-        }
+            .sidebar a {
+                display: block;
+                padding: 12px 20px;
+                color: white;
+                text-decoration: none;
+            }
 
-        .sidebar a:hover {
-            background-color: #0d2236;
-        }
+                .sidebar a:hover {
+                    background-color: #0d2236;
+                }
 
         .main-content {
             flex-grow: 1;
@@ -55,38 +55,38 @@
             <!-- Sidebar -->
             <nav class="sidebar">
                 <div class="text-center mb-4">
-                    <img src="resources/logo.png" class="img-fluid" alt="Logo" />
+                    <img src="resources/logonobg.png" class="img-fluid" alt="Logo" />
                 </div>
                 <h5 class="text-center">Menu</h5>
-                <a href="Home.aspx"><i class="bi bi-house-door-fill me-2"></i> Dashboard</a>
-                <a href="#"><i class="bi bi-person-check-fill me-2"></i> Gestione studente</a>
-                <a href="Gestione_Facolta.aspx"><i class="bi bi-mortarboard-fill me-2"></i> Gestione facoltà</a>
-                <a href="#"><i class="bi bi-clipboard2 me-2"></i> Gestione corsi</a>
-                <a href="Gestione_PianoStudi.aspx"><i class="bi bi-book me-2"></i> Gestione Piano Studi</a>
-                <a href="#"><i class="bi bi-people-fill me-2"></i> Gestione Docenti</a>
+                <a href="Home.aspx"><i class="bi bi-house-door-fill me-2"></i>Dashboard</a>
+                <a href="#"><i class="bi bi-person-check-fill me-2"></i>Gestione studente</a>
+                <a href="Gestione_Facolta.aspx"><i class="bi bi-mortarboard-fill me-2"></i>Gestione facoltà</a>
+                <a href="#"><i class="bi bi-clipboard2 me-2"></i>Gestione corsi</a>
+                <a href="Gestione_PianoStudi.aspx"><i class="bi bi-book me-2"></i>Gestione Piano Studi</a>
+                <a href="#"><i class="bi bi-people-fill me-2"></i>Gestione Docenti</a>
 
                 <div class="dropdown-sidebar">
                     <a class="dropdown-toggle" href="#" data-bs-toggle="collapse" data-bs-target="#submenuEconomica" role="button" aria-expanded="false" aria-controls="submenuEconomica">
-                        <i class="bi bi-wallet2 me-2"></i> Gestione Economica
+                        <i class="bi bi-wallet2 me-2"></i>Gestione Economica
                     </a>
                     <div class="collapse" id="submenuEconomica">
-                        <a class="submenu-item" href="#"><i class="bi bi-cash-stack me-2"></i> Incasso Annuale</a>
-                        <a class="submenu-item" href="#"><i class="bi bi-receipt me-2"></i> Incasso per corso</a>
-                        <a class="submenu-item" href="#"><i class="bi bi-piggy-bank me-2"></i> Stima incassi dell'anno</a>
+                        <a class="submenu-item" href="#"><i class="bi bi-cash-stack me-2"></i>Incasso Annuale</a>
+                        <a class="submenu-item" href="#"><i class="bi bi-receipt me-2"></i>Incasso per corso</a>
+                        <a class="submenu-item" href="#"><i class="bi bi-piggy-bank me-2"></i>Stima incassi dell'anno</a>
                     </div>
                 </div>
 
                 <div class="dropdown-sidebar">
                     <a class="dropdown-toggle" href="#" data-bs-toggle="collapse" data-bs-target="#submenuStatistiche" role="button" aria-expanded="false" aria-controls="submenuStatistiche">
-                        <i class="bi bi-bar-chart-line-fill me-2"></i> Statistiche studenti
+                        <i class="bi bi-bar-chart-line-fill me-2"></i>Statistiche studenti
                     </a>
                     <div class="collapse" id="submenuStatistiche">
-                        <a class="submenu-item" href="#"><i class="bi bi-people-fill me-2"></i> Studenti laureati per anno</a>
-                        <a class="submenu-item" href="#"><i class="bi bi-receipt me-2"></i> Studenti iscritti per anno</a>
+                        <a class="submenu-item" href="#"><i class="bi bi-people-fill me-2"></i>Studenti laureati per anno</a>
+                        <a class="submenu-item" href="#"><i class="bi bi-receipt me-2"></i>Studenti iscritti per anno</a>
                     </div>
                 </div>
 
-                <a href="#"><i class="bi bi-envelope me-2"></i> Comunicazioni</a>
+                <a href="#"><i class="bi bi-envelope me-2"></i>Comunicazioni</a>
             </nav>
 
             <!-- Main content -->
@@ -96,30 +96,8 @@
             </main>
         </div>
     </form>
-    <footer>
-                <div class="bg-dark text-white h-100">
-                    <div class="container d-flex justify-content-between align-items-end flex-wrap">
-                        <div>
-                            <img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3" width="150px">
-                            <p class="fs-4 ms-4 mb-0">Università UNIGen</p>
-                            <p class="fs-6">Milano, Milano, MI 20100, IT</p>
-                        </div>
-                        <div>
-                            <p class="fs-6">© 2024 Generation: You Employed, Inc.</p>
-                        </div>
-                        <div>
-                            <p class="fs-5 mb-1">Chi Siamo</p>
-                            <ul class="list-unstyled ms-3">
-                                <li><a href="#" class="text-white">Contatti</a></li>
-                                <li><a href="#" class="text-white">Come Funziona</a></li>
-                                <li><a href="#" class="text-white">FAQ</a></li>
-                                <li><a href="#" class="text-white">Privacy</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </footer>
-    
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
 </html>
