--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Valutazione degli esami</a>
+                                <a class="nav-link active" aria-current="page" asp-area="" asp-controller="Test" asp-action="ValutazioneTest">Valutazione degli esami</a>
                             </li>
 
                         </ul>
