cambiata stringa connessione

--- a/AreaStudente/Views/Faq/Faq.cshtml
+++ b/AreaStudente/Views/Faq/Faq.cshtml
@@ -5,11 +5,11 @@
         <div class="accordion-item">
             <h2 class="accordion-header" id="heading1">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1"
-                        aria-expanded="true" aria-controls="collapse1">
+                        aria-expanded="false" aria-controls="collapse1">
                     1. Come ci si iscrive all’università?
                 </button>
             </h2>
-            <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1">
+            <div id="collapse1" class="accordion-collapse collapse " aria-labelledby="heading1">
                 <div class="accordion-body">
                     Registrandosi sul portale dell’università, compilando la domanda online e allegando i documenti
                     richiesti.
@@ -141,6 +141,13 @@
                     Continui a studiare come "fuori corso", sostenendo gli esami normalmente.
                 </div>
             </div>
+           
+        </div>
+        <div class="mb-5">
+            &nbsp;
+        </div>
+        <div class="mb-5">
+            &nbsp;
         </div>
     </div>
 </div>
