--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -126,7 +126,7 @@
                     <p class="fs-6">© 2024 Generation: You Employed, Inc.</p>
                 </div>
                 <div>
-                    <p class="fs-5 mb-1">Chi Siamo</p>
+                    <p class="fs-5">Chi Siamo</p>
                     <ul class="list-unstyled ms-3">
                         <li><a href="#" class="text-white">Contatti</a></li>
                         <li><a href="#" class="text-white">Come Funziona</a></li>
