--- a/Comunicazioni/Views/Login/Login.cshtml
+++ b/Comunicazioni/Views/Login/Login.cshtml
@@ -17,6 +17,7 @@
 	<div class="mt-3">
 		<label class="form-label">Ruolo</label>
 		<select class="form-select" id="lista" name="ruolo">
+			<option disabled selected>-- Seleziona un ruolo --</option>
 			<option value="1">Amministrazione</option>
 			<option value="2">Docente</option>
 			<option value="3">Studente</option>
