--- a/AreaDocente/Views/Shared/_Layout.cshtml
+++ b/AreaDocente/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
                                     Gestione ...
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">materiali</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Materiali" asp-action="Add">materiali</a></li>
                                     <li><a class="dropdown-item" href="#">lezioni</a></li>
                                     <li><a class="dropdown-item" href="#">appelli</a></li>
                                     <li><a class="dropdown-item" href="#">test</a></li>
