--- a/AreaDocente/Views/Home/Index.cshtml
+++ b/AreaDocente/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">Materiali</h5>
                     <p class="card-text">Qui sono contenuti l'aggiunta dei materiali e la loro gestione.</p>
-                    <a href="#" class="btn btn-primary mt-auto">Vai</a>
+                    <a asp-area="" asp-controller="Materiali" asp-action="Add" class="btn btn-primary mt-auto">Vai</a>
                 </div>
             </div>
         </div>
