aggiunta frasetta in Add e List del pannellino accanto

--- a/Comunicazioni/Views/Comunicazioni/Add.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/Add.cshtml
@@ -33,6 +33,6 @@
 			</div>
 		</form>
 	</div>
-	<div class="col-3 shadow p-3 bg-body-tertiary rounded">In questa pagina </div>
+	<div class="col-3 shadow p-3 bg-body-tertiary rounded">Nella pagina corrente, il docente e l'amministrazione possono inserire una comunicazione.</div>
 </div>
 
