--- a/Comunicazioni/Views/Comunicazioni/List.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/List.cshtml
@@ -103,5 +103,5 @@
     </tbody>
 </table>
 </div>
-    <div class="col-3 shadow p-3 bg-body-tertiary rounded">In questa pagina </div>
+    <div class="col-3 shadow p-3 bg-body-tertiary rounded">Nella pagina corrente viene mostrata la lista delle comunicazioni inserite dal docente e dall'amministrazione, alle quali gli studenti possono accedere per prenderne visione e rispondere in caso di dubbi. </div>
 </div>
