--- a/AreaStudente/wwwroot/css/show.css
+++ b/AreaStudente/wwwroot/css/show.css
@@ -1534,7 +1534,7 @@ a.text-white:focus {
 }
 
 .card-profile-image {
-    position: relative;s
+    position: relative;
 }
 
     .card-profile-image img {
